src/objects/IEC_Payment_Error__c.object
<CustomObject>
    <description>List of credit card payments that have error(s) associated.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>IEC Payment Errors</relationshipLabel>
        <relationshipName>IEC_Payment_Errors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accounting_Code__c</fullName>
        <label>Accounting Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applied_Credit_Balance_Amount__c</fullName>
        <label>Applied Credit Balance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applied_Invoice_Amount__c</fullName>
        <label>Applied Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Auth_Transaction_ID__c</fullName>
        <label>Auth Transaction ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Identification_Number__c</fullName>
        <label>Bank Identification Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Account</label>
        <referenceTo>Zuora__CustomerAccount__c</referenceTo>
        <relationshipLabel>IEC Payment Errors</relationshipLabel>
        <relationshipName>IEC_Payment_Errors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cancelled_On__c</fullName>
        <label>Cancelled On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Created_By__c</fullName>
        <label>Created By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Gateway_Order_ID__c</fullName>
        <label>Gateway Order ID</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gateway_Response_Code__c</fullName>
        <label>Gateway Response Code</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gateway_Response__c</fullName>
        <label>Gateway Response</label>
        <length>512</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gateway_State__c</fullName>
        <label>Gateway State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_For_Submission_On__c</fullName>
        <label>Market For Submission On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>IEC Payment Errors</relationshipLabel>
        <relationshipName>IEC_Payment_Errors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_ID__c</fullName>
        <label>Payment ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Number__c</fullName>
        <label>Payment Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_ID__c</fullName>
        <label>Reference ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refund_Amount__c</fullName>
        <label>Refund Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SIS_Invoice_Number__c</fullName>
        <label>SIS Invoice Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Payment_Reference_ID__c</fullName>
        <label>Second Payment Reference ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Settled_On__c</fullName>
        <label>Settled On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Soft_Descriptor_Phone__c</fullName>
        <label>Soft Descriptor Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Soft_Descriptor__c</fullName>
        <label>Soft Descriptor</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_On__c</fullName>
        <label>Submitted On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Transfered_to_Accounting__c</fullName>
        <label>Transfered to Accounting</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Unique External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Updated_By__c</fullName>
        <label>Updated By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Updated_Date__c</fullName>
        <label>Updated Date</label>
        <type>DateTime</type>
    </fields>
    <label>IEC Payment Error</label>
    <nameField>
        <label>Reference ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IEC Payment Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>